<resources>
    <string name="app_name">Darts Score Tracker</string>

    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>

    <string name="startingScore">501</string>

    <string name="D1">D1</string>
    <string name="D2">D2</string>
    <string name="D3">D3</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="twentyFive">25</string>
    <string name="fifty">50</string>
    <string name="doublePoints">X2</string>
    <string name="triplePoints">X3</string>
    <string name="Cancel">C</string>

    <string name="dart1">1st Dart</string>
    <string name="dart2">2nd Dart</string>
    <string name="dart3">3rd Dart</string>
    <string name="confirm">Confirm</string>

    <string name="resetGame">Reset Game</string>
    <string name="nextPlayer">Next Player</string>

</resources>
